verif/test/deca/context/invalid/op-bin-bad-op-verif.res
src/test/deca/context/invalid/op-bin-bad-op.deca:14:8: Incompatible types for boolean binary operator '&&' between 'int' and 'int'
